# NPCsUsePotions

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildvr.bat  cmakepreset.bat  vcpkg.json
Papyrus/scripts/: AnimatedPoisonsScript.pex  AnimatedPotionsScript.pex  NPCsUsePotions_MCM.pex  NPCsUsePotions_Poisons.pex  NPCsUsePotions_Potions.pex
Papyrus/source/scripts/: AnimatedPoisonsScript.psc  AnimatedPoisonsScript_3_2_1.psc  AnimatedPoisonsScript_5_1_1.psc  AnimatedPotionsScript.psc  AnimatedPotionsScript_4.3.psc  AnimatedPotionsScript_4.4.psc  AnimatedPotionsScript_5_1.psc  NPCsUsePotions_MCM.psc  NPCsUsePotions_Poisons.psc  NPCsUsePotions_Potions.psc
Translations/: NPCsUsePotions_ENGLISH.txt
include/: ActorInfo.h  ActorManipulation.h  AlchemyEffect.h  BufferOperations.h  Compatibility.h  Console.h  CustomItem.h  Data.h  DataStorage.h  Distribution.h  Events.h  Game.h  Hooks.h  ID.h  Logging.h  Misc.h  NUPInterface.h  Papyrus.h  Settings.h  Statistics.h  Tests.h  Threading.h  Types.h  Utility.h  VM.h
include/APIs/: APPSInterface.h  TrueDirectionalMovementAPI.h
include/Papyrus/: NPCsUsePotions_Poisons.h  NPCsUsePotions_Potions.h  NPCsUsePotions_Settings.h
src/: ActorInfo.cpp  ActorInfo.h  ActorManipulation.cpp  ActorManipulation.h  AlchemyEffect.cpp  BufferOperations.cpp  CMakeLists.txt  Compatibility.cpp  Console.cpp  Console.h  Data.cpp  DataStorage.cpp  DeprecatedCode.cpp  Distribution.cpp  Events - Copy.cpp  Events.cpp  Events.h  Events_Main.cpp  Events_Main_Support.cpp  Game.cpp  Game.h  Hooks.cpp  Hooks.h  ID.cpp  Logging.cpp  Logging.h  NUPInterface.cpp  PCH.h  Papyrus.cpp  Settings.cpp  Settings.h  SettingsLoadSave.cpp  Settings_Distribution.cpp  TODO.txt  Tests.cpp  Utility.cpp  Utility.h  VM.cpp  main.cpp
src/Papyrus/: NPCsUsePotions_Poisons.cpp  NPCsUsePotions_Potions.cpp  NPCsUsePotions_Settings.cpp
